# KHI-LBM

./: .gitignore  CMakeLists.txt  README.md
Framework/OpenLB/: CMakeLists.txt  config.mk
src/: Cylinder-LBM.cpp  LBM-Sim.cpp  RB-LBM.cpp
