cmake_minimum_required(VERSION 3.10)

# set the project name and version
project(LBM VERSION 1.3)


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -DPARALLEL_MODE_OMP -DOLB_PRECOMPILED -O3 -Wall -march=native -mtune=native -std=c++14")

set(SOURCE_FILES
        ./src/geometry/blockGeometryStructure3D.cpp
        ./src/geometry/superGeometry2D.cpp
        ./src/geometry/cuboidGeometry3D.cpp
        ./src/geometry/cuboid2D.cpp
        ./src/geometry/superGeometryStatistics2D.cpp
        ./src/geometry/superGeometryStatistics3D.cpp
        ./src/geometry/blockGeometry2D.cpp
        ./src/geometry/cuboidGeometry2D.cpp
        ./src/geometry/superGeometry3D.cpp
        ./src/geometry/blockGeometryStructure2D.cpp
        ./src/geometry/blockGeometryView2D.cpp
        ./src/geometry/blockGeometryStatistics3D.cpp
        ./src/geometry/blockGeometryStatistics2D.cpp
        ./src/geometry/blockGeometry3D.cpp
        ./src/geometry/blockGeometryView3D.cpp
        ./src/geometry/cuboid3D.cpp
        ./src/communication/blockLoadBalancer.cpp
        ./src/communication/communicator2D.cpp
        ./src/communication/superStructure3D.cpp
        ./src/communication/superStructure2D.cpp
        ./src/communication/mpiManager.cpp
        ./src/communication/cuboidNeighbourhood3D.cpp
        ./src/communication/heuristicLoadBalancer.cpp
        ./src/communication/communicator3D.cpp
        ./src/communication/ompManager.cpp
        ./src/communication/loadBalancer.cpp
        ./src/communication/cuboidNeighbourhood2D.cpp
        ./src/utilities/functorPtr.cpp
        ./src/utilities/hyperplaneLattice3D.cpp
        ./src/utilities/hyperplane2D.cpp
        ./src/utilities/arithmetic.cpp
        ./src/utilities/benchmarkUtil.cpp
        ./src/utilities/vectorHelpers.cpp
        ./src/utilities/hyperplane3D.cpp
        ./src/utilities/hyperplaneLattice2D.cpp
        ./src/utilities/timer.cpp
        ./src/boundary/advectionDiffusionBoundaryPostProcessor3D.cpp
        ./src/boundary/extendedFiniteDifferenceBoundary2D.cpp
        ./src/boundary/momentaOnBoundaries2D.cpp
        ./src/boundary/wallFunctionBoundaryPostProcessors3D.cpp
        ./src/boundary/extendedFiniteDifferenceBoundary3D.cpp
        ./src/boundary/inamuroBoundary2D.cpp
        ./src/boundary/advectionDiffusionBoundaryCondition3D.cpp
        ./src/boundary/offBoundaryCondition3D.cpp
        ./src/boundary/offBoundaryPostProcessors2D.cpp
        ./src/boundary/zouHeBoundary3D.cpp
        ./src/boundary/advectionDiffusionBoundaryCondition2D.cpp
        ./src/boundary/superOffBoundaryCondition3D.cpp
        ./src/boundary/inamuroBoundary3D.cpp
        ./src/boundary/superOffBoundaryCondition2D.cpp
        ./src/boundary/superBoundaryCondition3D.cpp
        ./src/boundary/zouHeBoundary2D.cpp
        ./src/boundary/offBoundaryCondition2D.cpp
        ./src/boundary/zouHeDynamics.cpp
        ./src/boundary/offBoundaryPostProcessors3D.cpp
        ./src/boundary/inamuroAnalyticalDynamics.cpp
        ./src/boundary/momentaOnBoundaries3D.cpp
        ./src/boundary/superBoundaryCondition2D.cpp
        ./src/boundary/boundaryCondition2D.cpp
        ./src/boundary/boundaryPostProcessors3D.cpp
        ./src/boundary/inamuroNewtonRaphsonDynamics.cpp
        ./src/boundary/boundaryCondition3D.cpp
        ./src/boundary/boundaryPostProcessors2D.cpp
        ./src/dynamics/freeEnergyDynamics.cpp
        ./src/dynamics/smagorinskyBGKdynamics.cpp
        ./src/dynamics/latticeDescriptors.cpp
        ./src/dynamics/interactionPotential.cpp
        ./src/dynamics/entropicDynamics.cpp
        ./src/dynamics/chopardDynamics.cpp
        ./src/dynamics/dynamics.cpp
        ./src/dynamics/mrtDynamics.cpp
        ./src/external/tinyxml/xmltest.cpp
        ./src/external/tinyxml/tinystr.cpp
        ./src/external/tinyxml/tinyxmlparser.cpp
        ./src/external/tinyxml/tinyxmlerror.cpp
        ./src/external/tinyxml/tinyxml.cpp
        ./src/core/blockStructure2D.cpp
        ./src/core/blockLatticeView3D.cpp
        ./src/core/radiativeUnitConverter.cpp
        ./src/core/postProcessing3D.cpp
        ./src/core/superData3D.cpp
        ./src/core/latticeStatistics.cpp
        ./src/core/blockLattice3D.cpp
        ./src/core/postProcessing2D.cpp
        ./src/core/blockLatticeView2D.cpp
        ./src/core/blockStructure3D.cpp
        ./src/core/superData2D.cpp
        ./src/core/serializer.cpp
        ./src/core/superLattice3D.cpp
        ./src/core/cell.cpp
        ./src/core/superLattice2D.cpp
        ./src/core/blockLattice2D.cpp
        ./src/core/blockLatticeStructure3D.cpp
        ./src/core/blockData3D.cpp
        ./src/core/blockLatticeStructure2D.cpp
        ./src/core/blockData2D.cpp
        ./src/core/unitConverter.cpp
        ./src/particles/superParticleSystem3D.cpp
        ./src/particles/particle3D.cpp
        ./src/particles/boundaries/materialBoundary3D.cpp
        ./src/particles/boundaries/wireBoundaryForMagP3D.cpp
        ./src/particles/boundaries/boundary3D.cpp
        ./src/particles/boundaries/boundarySimpleReflection3D.cpp
        ./src/particles/forces/hertzMindlinDeresiewicz3D.cpp
        ./src/particles/forces/stokesDragForceForHomVelField3D.cpp
        ./src/particles/forces/interpMagForceForMagP3D.cpp
        ./src/particles/forces/linearContactForce3D.cpp
        ./src/particles/forces/magneticForceFromHField3D.cpp
        ./src/particles/forces/buoyancyForce3D.cpp
        ./src/particles/forces/linearDampingForceForMagDipoleMoment3D.cpp
        ./src/particles/forces/transferExternalForce3D.cpp
        ./src/particles/forces/stokesDragForce3D.cpp
        ./src/particles/forces/weightForce3D.cpp
        ./src/particles/forces/magneticForceForMagP3D.cpp
        ./src/particles/forces/forceFromExtField3D.cpp
        ./src/particles/forces/force3D.cpp
        ./src/particles/forces/hertzMindlinDeresiewiczForCombWithCollisionModel3D.cpp
        ./src/particles/superParticleSysVTUout.cpp
        ./src/particles/particleSystem3D.cpp
        ./src/io/blockGifWriter.cpp
        ./src/io/ostreamManager.cpp
        ./src/io/blockVtkWriter3D.cpp
        ./src/io/gnuplotHeatMapWriter.cpp
        ./src/io/serializerIO.cpp
        ./src/io/fileName.cpp
        ./src/io/gnuplotWriter.cpp
        ./src/io/base64.cpp
        ./src/io/superVtmWriter2D.cpp
        ./src/io/colormaps.cpp
        ./src/io/vtiReader.cpp
        ./src/io/vtiWriter.cpp
        ./src/io/parallelIO.cpp
        ./src/io/blockVtkWriter2D.cpp
        ./src/io/stlReader.cpp
        ./src/io/superVtmWriter3D.cpp
        ./src/io/xmlReader.cpp
        ./src/functors/genericF.cpp
        ./src/functors/analytical/interpolationF2D.cpp
        ./src/functors/analytical/frameChangeF3D.cpp
        ./src/functors/analytical/indicator/indicatorF2D.cpp
        ./src/functors/analytical/indicator/smoothIndicatorF3D.cpp
        ./src/functors/analytical/indicator/indicatorBaseF2D.cpp
        ./src/functors/analytical/indicator/smoothIndicatorBaseF3D.cpp
        ./src/functors/analytical/indicator/smoothIndicatorF2D.cpp
        ./src/functors/analytical/indicator/smoothIndicatorBaseF2D.cpp
        ./src/functors/analytical/indicator/smoothIndicatorCalcF3D.cpp
        ./src/functors/analytical/indicator/indicatorF3D.cpp
        ./src/functors/analytical/indicator/indicatorBaseF3D.cpp
        ./src/functors/analytical/indicator/indicCalc3D.cpp
        ./src/functors/analytical/indicator/smoothIndicatorCalcF2D.cpp
        ./src/functors/analytical/indicator/indicCalc2D.cpp
        ./src/functors/analytical/interpolationF3D.cpp
        ./src/functors/analytical/analyticalBaseF.cpp
        ./src/functors/analytical/analyticCalcF.cpp
        ./src/functors/analytical/frameChangeF2D.cpp
        ./src/functors/analytical/analyticalF.cpp
        ./src/functors/lattice/reductionF3D.cpp
        ./src/functors/lattice/blockBaseF3D.cpp
        ./src/functors/lattice/superCalcF3D.cpp
        ./src/functors/lattice/superLatticeRefinementMetricF2D.cpp
        ./src/functors/lattice/blockReduction2D1D.cpp
        ./src/functors/lattice/blockLatticeLocalF2D.cpp
        ./src/functors/lattice/superLocalAverage2D.cpp
        ./src/functors/lattice/indicator/blockIndicatorBaseF2D.cpp
        ./src/functors/lattice/indicator/blockIndicatorBaseF3D.cpp
        ./src/functors/lattice/indicator/blockIndicatorF2D.cpp
        ./src/functors/lattice/indicator/superIndicatorBaseF2D.cpp
        ./src/functors/lattice/indicator/blockIndicatorF3D.cpp
        ./src/functors/lattice/indicator/superIndicatorF3D.cpp
        ./src/functors/lattice/indicator/superIndicatorBaseF3D.cpp
        ./src/functors/lattice/indicator/superIndicatorF2D.cpp
        ./src/functors/lattice/superBaseF3D.cpp
        ./src/functors/lattice/blockGeometryFaces3D.cpp
        ./src/functors/lattice/turbulentF3D.cpp
        ./src/functors/lattice/blockLocalAverage2D.cpp
        ./src/functors/lattice/superGeometryFaces3D.cpp
        ./src/functors/lattice/superMin3D.cpp
        ./src/functors/lattice/superLocalAverage3D.cpp
        ./src/functors/lattice/blockAverage3D.cpp
        ./src/functors/lattice/superLatticeIntegralF2D.cpp
        ./src/functors/lattice/blockLatticeRefinementMetricF2D.cpp
        ./src/functors/lattice/superErrorNorm2D.cpp
        ./src/functors/lattice/reductionF2D.cpp
        ./src/functors/lattice/superBaseF2D.cpp
        ./src/functors/lattice/blockLatticeLocalF3D.cpp
        ./src/functors/lattice/blockReduction2D2D.cpp
        ./src/functors/lattice/blockLatticeIntegralF3D.cpp
        ./src/functors/lattice/blockCalcF2D.cpp
        ./src/functors/lattice/superAverage3D.cpp
        ./src/functors/lattice/blockBaseF2D.cpp
        ./src/functors/lattice/blockReduction3D2D.cpp
        ./src/functors/lattice/superConst2D.cpp
        ./src/functors/lattice/blockCalcF3D.cpp
        ./src/functors/lattice/blockLatticeIntegralF2D.cpp
        ./src/functors/lattice/superLatticeLocalF2D.cpp
        ./src/functors/lattice/blockLocalAverage3D.cpp
        ./src/functors/lattice/latticeFrameChangeF3D.cpp
        ./src/functors/lattice/superConst3D.cpp
        ./src/functors/lattice/superErrorNorm3D.cpp
        ./src/functors/lattice/superCalcF2D.cpp
        ./src/functors/lattice/superLatticeIntegralF3D.cpp
        ./src/functors/lattice/blockMin3D.cpp
        ./src/functors/lattice/blockMax3D.cpp
        ./src/functors/lattice/superMax3D.cpp
        ./src/functors/lattice/superLatticeLocalF3D.cpp
        ./src/functors/lattice/integral/blockLpNorm3D.cpp
        ./src/functors/lattice/integral/superPlaneIntegralFluxMass3D.cpp
        ./src/functors/lattice/integral/superPlaneIntegralF3D.cpp
        ./src/functors/lattice/integral/superLpNorm2D.cpp
        ./src/functors/lattice/integral/blockLpNorm2D.cpp
        ./src/functors/lattice/integral/superLpNorm3D.cpp
        ./src/functors/lattice/integral/superPlaneIntegralFluxF2D.cpp
        ./src/functors/lattice/integral/superPlaneIntegralF2D.cpp
        ./src/functors/lattice/integral/blockIntegralF3D.cpp
        ./src/functors/lattice/integral/superIntegralF3D.cpp
        ./src/functors/lattice/integral/superPlaneIntegralFluxMass2D.cpp
        ./src/functors/lattice/integral/superPlaneIntegralFluxF3D.cpp
        )

include_directories(./src)
add_library(LBM-lib SHARED ${SOURCE_FILES})

add_executable(LBI-RB-Example ./examples/multiComponent/rayleighTaylor3d/rayleighTaylor3d.cpp)